--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Click==7.0
 dominate==2.3.5
 Flask==1.0.2
 Flask-Bootstrap4==4.0.2
+Flask-Login==0.4.1
 Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
@@ -11,6 +12,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.0.9
 MarkupSafe==1.1.1
+pkg-resources==0.0.0
 python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
