--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.0.10
+certifi==2019.3.9
 Click==7.0
 dominate==2.3.5
 Flask==1.0.2
@@ -12,10 +13,12 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.0.9
 MarkupSafe==1.1.1
+psycopg2==2.7.6.1
 python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.3
+virtualenv==16.5.0
 visitor==0.1.3
 Werkzeug==0.15.2
 WTForms==2.2.1
